--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,23 @@
 
 Servers/
 
+20220719_Calculator/
+20220721_Calculator/
+20220722_Calculator/
+20220723_Calculator/
+JAVA_basic/
+JAVA_reflection/
+JSP_basic/
+JSP_bootstrap/
+JSP_command_bootstrap/
+JSP_EL/
+JSP_JSTL/
+Servlet_basic/
+Teacher0726/
+test/
+XMLtest/
+JSP_JSTL.zip
+
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
