--- a/GoodDog/bin/com/dog/properties/url.properties
+++ b/GoodDog/bin/com/dog/properties/url.properties
@@ -5,7 +5,7 @@
 /login.do=com.dog.controller.member.LoginAction
 
 ##member
-#/member/list.do=com.jsp.action.member.MemberListAction
+/member/list.do=com.dog.controller.member.MemberListAction
 
 #dog
 /dog/doglist.do=com.dog.action.happydog.DogListAction
