--- a/GoodDog/res/com/dog/properties/url.properties
+++ b/GoodDog/res/com/dog/properties/url.properties
@@ -3,11 +3,11 @@
 
 /loginForm.do=com.dog.controller.member.LoginFormAction
 /login.do=com.dog.controller.member.LoginAction
+/logout.do=com.dog.controller.member.LogoutAction
 
 ##member
 #/member/list.do=com.jsp.action.member.MemberListAction
 
 #dog
 /dog/doglist.do=com.dog.action.happydog.DogListAction
-
 
