봉사 신청자 리스트 커밋

--- a/GoodDog/bin/com/dog/properties/url.properties
+++ b/GoodDog/bin/com/dog/properties/url.properties
@@ -1,7 +1,14 @@
+/index.do=com.dog.controller.member.MainAction
 
+
+/loginForm.do=com.dog.controller.member.LoginFormAction
+/login.do=com.dog.controller.member.LoginAction
 
 ##member
 #/member/list.do=com.jsp.action.member.MemberListAction
+
+#volunteer
+/volunteer/volunteerList.do=com.dog.action.volunteer.VolunteerListAction
 
 #dog
 /dog/doglist.do=com.dog.action.happydog.DogListAction
