--- a/GoodDog/res/com/dog/properties/url.properties
+++ b/GoodDog/res/com/dog/properties/url.properties
@@ -7,7 +7,8 @@
 ##member
 #/member/list.do=com.jsp.action.member.MemberListAction
 
+#volunteer
+/volunteer/volunteerList.do=com.dog.action.volunteer.VolunteerListAction
+
 #dog
 /dog/doglist.do=com.dog.action.happydog.DogListAction
-
-
