vol 봉사 상세보기

--- a/GoodDog/bin/com/dog/properties/url.properties
+++ b/GoodDog/bin/com/dog/properties/url.properties
@@ -9,8 +9,9 @@
 
 #volunteer
 /volunteer/volunteerList.do=com.dog.action.volunteer.VolunteerListAction
+/vol/calendarList.do=com.dog.action.volunteer.VolunteerCalendarListAction
+/vol/detail.do=com.dog.action.volunteer.VolunteerDetailAction
+
 
 #dog
 /dog/doglist.do=com.dog.action.happydog.DogListAction
-
-
