8/13까지의 작업본_채희진

--- a/GoodDog/res/com/dog/properties/url.properties
+++ b/GoodDog/res/com/dog/properties/url.properties
@@ -8,6 +8,8 @@
 #/member/list.do=com.jsp.action.member.MemberListAction
 
 #dog
-/dog/doglist.do=com.dog.action.happydog.DogListAction
+/dog/dogList.do=com.dog.action.happydog.DogListAction
 
 
+#volunteer
+/vol/calendarList.do=com.dog.action.volunteer.VolunteerCalendarListAction
