--- a/GoodDog/bin/com/dog/properties/url.properties
+++ b/GoodDog/bin/com/dog/properties/url.properties
@@ -1,7 +1,15 @@
+/index.do=com.dog.controller.member.MainAction
 
+
+/loginForm.do=com.dog.controller.member.LoginFormAction
+/login.do=com.dog.controller.member.LoginAction
 
 ##member
 #/member/list.do=com.jsp.action.member.MemberListAction
 
 #dog
-/dog/doglist.do=com.dog.action.happydog.DogListAction
+/dog/dogList.do=com.dog.action.happydog.DogListAction
+
+
+#volunteer
+/vol/calendarList.do=com.dog.action.volunteer.VolunteerCalendarListAction
