--- a/GoodDog/bin/com/dog/properties/url.properties
+++ b/GoodDog/bin/com/dog/properties/url.properties
@@ -10,4 +10,13 @@
 #dog
 /dog/doglist.do=com.dog.action.happydog.DogListAction
 
+/member/regist.do=com.dog.controller.member.MemberRegistAction
+/member/registForm.do=com.dog.controller.member.MemberRegistFormAction
 
+/member/detail.do=com.dog.controller.member.MemberDetailAction
+
+/member/idCheck.do=com.dog.controller.member.MemberIdCheckAction
+
+/member/modifyForm.do=com.dog.controller.member.MemberModifyFormAction
+/member/modify.do=com.dog.controller.member.MemberModifyAction
+/member/remove.do=com.dog.controller.member.MemberRemoveAction
