--- a/GoodDog/WebContent/WEB-INF/web.xml
+++ b/GoodDog/WebContent/WEB-INF/web.xml
@@ -22,4 +22,13 @@
     <servlet-name>DispatcherServlet</servlet-name>
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
+  
+  <error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/views/error/500_error.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/error/404_error.jsp</location>
+	</error-page>
 </web-app>
