--- a/GoodDog/res/com/dog/properties/url.properties
+++ b/GoodDog/res/com/dog/properties/url.properties
@@ -11,6 +11,7 @@
 /volunteer/volunteerList.do=com.dog.action.volunteer.VolunteerListAction
 /vol/calendarList.do=com.dog.action.volunteer.VolunteerCalendarListAction
 /vol/detail.do=com.dog.action.volunteer.VolunteerDetailAction
+/vol/wantRegist.do=com.dog.action.volunteer.VolunteerWantRegistAction
 
 
 #dog
