--- a/GoodDog/res/com/dog/properties/url.properties
+++ b/GoodDog/res/com/dog/properties/url.properties
@@ -4,6 +4,8 @@
 /loginForm.do=com.dog.action.member.LoginFormAction
 /login.do=com.dog.action.member.LoginAction
 /logout.do=com.dog.action.member.LogoutAction
+/findIdForm.do=com.dog.action.member.FindIdFormAction
+/findId.do=com.dog.action.member.FindIdAction
 
 
 #volunteer
