--- a/GoodDog/res/com/dog/properties/url.properties
+++ b/GoodDog/res/com/dog/properties/url.properties
@@ -8,6 +8,9 @@
 /findId.do=com.dog.action.member.FindIdAction
 
 
+
+
+
 #volunteer
 /volunteer/volunteerList.do=com.dog.action.volunteer.VolunteerListAction
 /vol/calendarList.do=com.dog.action.volunteer.VolunteerCalendarListAction
@@ -27,3 +30,12 @@
 /dog/picture.do=com.dog.action.happydog.DogPictureUploadAction
 /dog/getpicture.do=com.dog.action.happydog.DogGetPictureAction
 /dog/idcheck.do=com.dog.action.happydog.DogIdCheckAction
+
+
+
+
+
+
+/member/regist.do=com.dog.action.member.MemberRegistAction
+/member/registForm.do=com.dog.action.member.MemberRegistFormAction
+/member/idCheck.do=com.dog.action.member.MemberIdCheckAction
