--- a/GoodDog/res/com/dog/properties/url.properties
+++ b/GoodDog/res/com/dog/properties/url.properties
@@ -10,9 +10,10 @@
 /volunteer/volunteerList.do=com.dog.action.volunteer.VolunteerListAction
 /vol/calendarList.do=com.dog.action.volunteer.VolunteerCalendarListAction
 /vol/detail.do=com.dog.action.volunteer.VolunteerDetailAction
-/vol/volUpdateForm.do=com.dog.action.volunteer.VolunteerUpdateFormAction
 /vol/volUpdate.do=com.dog.action.volunteer.VolunteerUpdateAction
+/vol/volUpdateForm.do=com.dog.action.volunteer.VolunteerUpdateFormAction
 /vol/wantRegist.do=com.dog.action.volunteer.VolunteerWantRegistAction
+/vol/volDelete.do=com.dog.action.volunteer.VolunteerDeleteAction
 
 /vol/volRegist.do=com.dog.action.volunteer.VolunteerCalendarRegistAction
 /vol/volRegistForm.do=com.dog.action.volunteer.VolunteerCalendarRegistFormAction
