--- a/GoodDog/res/com/dog/properties/url.properties
+++ b/GoodDog/res/com/dog/properties/url.properties
@@ -20,3 +20,8 @@
 /member/modifyForm.do=com.dog.controller.member.MemberModifyFormAction
 /member/modify.do=com.dog.controller.member.MemberModifyAction
 /member/remove.do=com.dog.controller.member.MemberRemoveAction
+
+#board
+/qnaBoard/list.do=com.dog.action.qnaboard.BoardListAction
+
+#/qnaBoard/regist.do=com.dog.action.qnaboard.BoardRegistAction
