--- a/GoodDog/res/com/dog/properties/url.properties
+++ b/GoodDog/res/com/dog/properties/url.properties
@@ -46,3 +46,11 @@
 /member/regist.do=com.dog.action.member.MemberRegistAction
 /member/registForm.do=com.dog.action.member.MemberRegistFormAction
 /member/idCheck.do=com.dog.action.member.MemberIdCheckAction
+
+
+#/member/remove.do=com.dog.controller.member.MemberRemoveAction
+
+#board
+/qnaBoard/list.do=com.dog.action.qnaboard.BoardListAction
+
+#/qnaBoard/regist.do=com.dog.action.qnaboard.BoardRegistAction
