--- a/GoodDog/bin/com/dog/properties/url.properties
+++ b/GoodDog/bin/com/dog/properties/url.properties
@@ -24,4 +24,5 @@
 #board
 /qnaBoard/list.do=com.dog.action.qnaboard.BoardListAction
 
-#/qnaBoard/regist.do=com.dog.action.qnaboard.BoardRegistAction
+/qnaBoard/regist.do=com.dog.action.qnaboard.BoardRegistAction
+/qnaBoard/registForm.do=com.dog.action.qnaboard.BoardRegistFormAction
